<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_lock_screen">Lock Screen</string>
    <string name="menu_user_settings">User Settings</string>
    <string name="menu_developer_page">Developer Page</string>
    <string name="menu_bug_report">Bug Report</string>

    <string name="home_second">Home Second</string>

    <string name="dont_have_account">Don\'t have account</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_activity_navigtion">NavigtionActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="welcome">Welcome</string>
    <string name="registered">Start the App</string>
    <string name="not_registered">Sign in</string>
    <string name="report_mail">martin.marinkovic3@gmail.com</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email to sent you password reset instructions.</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_email">Email</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="reset">Reset</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="set_wallpaper">Set Wallpapar</string>
    <string name="add_sticker">Add Stickers</string>
    <string name="enable_lock_screen">Enable Lock Screen</string>
    <string name="set_password">Set Password</string>
    <string name="save">Save</string>
    <string name="add_media">Add Media</string>
    <string name="camera_photo">Camera Photo</string>
    <string name="gallery_photo">Gallery Photo</string>
    <string name="audio_recording">Audio Recording</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="min_scale">0.01f</string>
    <string name="max_scale">0.8f</string>

    <string name="permission_accessibility_setting_description">"Turn on and it locks all soft key including HOME, RECENTS, BACK, MENU buttons.

You may be warned about potential privacy risk, that's just a regular informative warning for any accessibility service. We promise NEVER EVER collecting your personal information in this accessibility service."</string>

    <string name="pinlock_title">Enter Pin Code</string>
    <string name="pinlock_settitle">Set Pin Code</string>
    <string name="pinlock_firsttry">Wrong Pin Code: First Try</string>
    <string name="pinlock_secondtry">Wrong Pin Code: Second Try</string>
    <string name="pinlock_wrongpin">Wrong Pin code</string>
    <string name="pinlock_secondPin">Enter Pin Code Again</string>
    <string name="pinlock_tryagain">Pin Codes Are Not The Same</string>
    <string name="pinlock_fingerprint">Use Fingerprint</string>

    <string name="pin_enabled">Pin Enabled</string>
    <string name="action_close">Dismiss</string>
</resources>
