<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="20sp"
    android:gravity="center">

    <TextView
        android:layout_margin="10sp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_media"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center_horizontal">
    </TextView>

    <RelativeLayout
        android:id="@+id/btn_gallery"
        android:layout_margin="10sp"
        android:background="@drawable/rounded_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_alignParentLeft="true"
            android:layout_margin="20dp"
            android:id="@+id/btn_gallery1"
            android:background="@drawable/ic_photo_camera"
            android:layout_width="60sp"
            android:layout_height="50sp" />

        <TextView
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btn_gallery1"
            android:layout_toRightOf="@+id/btn_gallery1"
            android:text="@string/camera_photo"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"></TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_camera"
        android:layout_margin="10sp"
        android:background="@drawable/rounded_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_alignParentLeft="true"
            android:layout_margin="20dp"
            android:id="@+id/btn_camera1"
            android:background="@drawable/ic_gallery"
            android:layout_width="60sp"
            android:layout_height="50sp"  />

        <TextView
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btn_camera1"
            android:layout_toRightOf="@+id/btn_camera1"
            android:text="@string/gallery_photo"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"></TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_recorder"
        android:layout_margin="10sp"
        android:background="@drawable/rounded_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_alignParentLeft="true"
            android:layout_margin="20dp"
            android:id="@+id/btn_recorder1"
            android:background="@drawable/ic_audiotrack"
            android:layout_width="60sp"
            android:layout_height="50sp"  />

        <TextView
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btn_recorder1"
            android:layout_toRightOf="@+id/btn_recorder1"
            android:text="@string/audio_recording"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"></TextView>
    </RelativeLayout>

</LinearLayout>